--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@monaco-editor/react": "^4.6.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "fabric": "^5.5.1",
     "lucide-react": "^0.475.0",
